# rtic-blink-example

./: Cargo.toml  Embed.toml  README.md
src/: main.rs
