[package]
name = "rtic-blink-c8t6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", features = ["device"]}
stm32f1xx-hal = { version = "0.10.0", features = ["rt", "stm32f103", "medium"]}
rtt-target = { version = "0.3.1", features = ["cortex-m"]}
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"]}
nb = "1.1.0"
embedded-hal = "0.2.7"
cortex-m-rtic = "1.1.4"
systick-monotonic = "1.0.1"
rtic-monotonics = "1.5.0"


[[bin]]
name = "rtic-blink-c8t6"
test = false
bench = false

[profile.release]
lto = true
codegen-units = 1
debug = true
opt-level =  "s"
